# -DjangoRestFramework

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml
bookstore/: db.sqlite3  settings.py  urls.py
bookstore/bookstore/: settings.py  urls.py  views.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0003_alter_product_description.py
product/models/: product.py
product/serializers/: category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
