[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["eduardo oliveira <dudu091999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.2"
factory-boy = "^3.3.0"
django = { version = "^5.0.3", python = ">=3.10" }
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookstore.settings"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
